fix: alter spacing for large text

--- a/src/styles/parts/section-about.scss
+++ b/src/styles/parts/section-about.scss
@@ -1,4 +1,5 @@
 .large-text {
   font-size: var(--wp--preset--font-size--xxlarge);
   line-height: var(--wp--preset--font-size--xxlarge);
+  margin-top: 0;
 }
